syntax = "proto3";

package coordinator;

option go_package = "github.com/chroma/chroma-coordinator/internal/proto/coordinatorpb";

message Status {
  string reason = 1;
  int32 code = 2;
}

message UpdateMetadataValue {
  oneof value {
      string string_value = 1;
      int64 int_value = 2;
      double float_value = 3;
  }
}

message UpdateMetadata {
  map<string, UpdateMetadataValue> metadata = 1;
}

message CreateCollectionRequest {
  Collection collection = 1;
  optional bool get_or_create = 2;
}

message Collection {
  string id = 1;
  string name = 2;
  optional UpdateMetadata metadata = 3;
}

message CreateCollectionResponse {
  Collection collection = 1;
  Status status = 2;
}

message GetCollectionsRequest {
  optional string id = 1;
  optional string name = 2;
  optional string topic = 3;
}

message GetCollectionsResponse {
  repeated Collection collections = 1;
  Status status = 2;
}

service MetadataService {
  rpc CreateCollection(CreateCollectionRequest) returns (CreateCollectionResponse) {}
  rpc GetCollections(GetCollectionsRequest) returns (GetCollectionsResponse) {}
}
